--- a/MEVNV/package.json
+++ b/MEVNV/package.json
@@ -12,6 +12,9 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "multer": "^1.4.5-lts.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.0",
