--- a/MEVNV/backend/package.json
+++ b/MEVNV/backend/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "backend",
+  "name": "e-marketplace",
   "version": "1.0.0",
-  "description": "",
+  "description": "final project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "NopXx",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "axios": "^1.2.0",
     "body-parser": "^1.20.1",
-    "cookie-session": "^2.0.0",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.3",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   }
 }
